--- a/IndependentWork-13/IndependentWork-13.csproj
+++ b/IndependentWork-13/IndependentWork-13.csproj
@@ -3,12 +3,9 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
+    <RootNamespace>IndependentWork_13</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Polly" Version="8.6.5" />
-  </ItemGroup>
 
 </Project>
